--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    color: $text_color;
+    font-family: $font_text;
+}
+
+a {
+    text-decoration: none;
+}
+
+.hidden {
+    display: none;
+}
