--- a/public/css/app.css
+++ b/public/css/app.css
@@ -101,6 +101,8 @@ header a:hover {
           transform: translate(-50%, -50%);
 }
 
+/*---- jumbo -----*/
+
 .jumbo {
   width: 1150px;
   margin: 100px auto;
@@ -141,5 +143,66 @@ header a:hover {
 
 .jumbo-picture img {
   width: 100%;
+}
+
+/*---how-work----*/
+
+#how-work {
+  background-color: #ffe7d2;
+}
+
+.top-how-work,
+.bottom-how-work {
+  width: 1150px;
+  margin: 0 auto;
+  padding: 80px 0;
+  text-align: center;
+}
+
+.top-how-work h2,
+.bottom-how-work h2 {
+  max-width: 628px;
+  line-height: 27px;
+  margin: 0 auto;
+  font-weight: bold;
+}
+
+.top-how-work .how-work-container,
+.bottom-how-work .how-work-container {
+  max-width: 860px;
+  margin: 0 auto;
+}
+
+.top-how-work .how-work-container .how-work-box,
+.bottom-how-work .how-work-container .how-work-box {
+  width: 33%;
+  margin: 0 auto;
+  float: left;
+}
+
+.top-how-work .how-work-container .how-work-box .img-box,
+.bottom-how-work .how-work-container .how-work-box .img-box {
+  width: 100%;
+  height: 238px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+}
+
+.top-how-work .how-work-container .how-work-box .img-box img,
+.bottom-how-work .how-work-container .how-work-box .img-box img {
+  width: 50%;
+}
+
+.top-how-work .how-work-container .how-work-box .img-box p,
+.bottom-how-work .how-work-container .how-work-box .img-box p {
+  font-size: 18px;
+}
+
+.top-how-work {
+  border-bottom: 1px solid #58402c;
 }
 
