--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -20,6 +20,8 @@
 
 }
 
+/*---- jumbo -----*/
+
 .jumbo {
     width: 1150px;
     margin: 100px auto;
@@ -61,4 +63,62 @@
 
 .jumbo-picture img {
     width: 100%;
+}
+
+/*---how-work----*/
+
+#how-work {
+    background-color: $colored_background;
+}
+
+.top-how-work,
+.bottom-how-work {
+    width: 1150px;
+    margin: 0 auto;
+    padding: 80px 0;
+    text-align: center;
+
+    h2 {
+        max-width: 628px;
+        line-height: 27px;
+        margin: 0 auto;
+        font-weight: bold;
+    }
+
+    .how-work-container {
+        max-width: 860px;
+        margin: 0 auto;
+
+        .how-work-box {
+            width: 33%;
+            margin: 0 auto;
+            float: left;
+
+            .img-box {
+                width: 100%;
+                height: 238px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    width: 50%;
+                }
+
+                p {
+                    font-size: 18px;
+                }
+            }
+
+        }
+    }
+}
+
+.top-how-work {
+    border-bottom: $border_bottom;
+}
+
+.bottom-how-work img:last-of-type {
+    // height: 50%;
+    // width: 25%;
 }
