--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -2,3 +2,4 @@ $text_color: #58402c;
 $font_text: 'Raleway', sans-serif;
 $light_background: #ffffff;
 $colored_background: #ffe7d2;
+$border_bottom: 1px solid $text_color;
