--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
-@import 'src/partials/_variables';
-@import 'src/partials/_common';
-@import 'src/partials/_header';
-@import 'src/partials/_main';
-@import 'src/partials/_footer';
+@import 'partials/_variables';
+@import 'partials/_common';
+@import 'partials/_header';
+@import 'partials/_main';
+@import 'partials/_footer';
