--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -69,6 +69,15 @@
 
 #how-work {
     background-color: $colored_background;
+    padding-bottom: 80px;
+
+    h2 {
+        max-width: 628px;
+        line-height: 40px;
+        margin: 0 auto;
+        font-weight: bold;
+        text-align: center;
+    }
 }
 
 .top-how-work,
@@ -78,16 +87,10 @@
     padding: 80px 0;
     text-align: center;
 
-    h2 {
-        max-width: 628px;
-        line-height: 27px;
-        margin: 0 auto;
-        font-weight: bold;
-    }
-
     .how-work-container {
         max-width: 860px;
         margin: 0 auto;
+        padding-bottom: 80px;
 
         .how-work-box {
             width: 33%;
@@ -96,7 +99,7 @@
 
             .img-box {
                 width: 100%;
-                height: 238px;
+                height: 180px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -104,12 +107,11 @@
                 img {
                     width: 50%;
                 }
-
-                p {
-                    font-size: 18px;
-                }
             }
-
+            p {
+                font-size: 18px;
+                padding: 0 20px;
+            }
         }
     }
 }
@@ -121,4 +123,13 @@
 .bottom-how-work img:last-of-type {
     // height: 50%;
     // width: 25%;
+}
+
+.big-img-box {
+    width: 280px;
+    margin: 0 auto;
+
+    img {
+        width: 100%;
+    }
 }
