--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -2,4 +2,5 @@ $text_color: #58402c;
 $font_text: 'Raleway', sans-serif;
 $light_background: #ffffff;
 $colored_background: #ffe7d2;
-$border_bottom: 1px solid $text_color;
+$border_brown: 1px solid $text_color;
+$bor_rad_standard: 7px;
