--- a/public/css/app.css
+++ b/public/css/app.css
@@ -79,6 +79,23 @@ header a:hover {
   color: white;
 }
 
+#dropped-link {
+  padding: 10px;
+}
+
+#dropped-link:hover + .sub-menu.hidden {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  border: 1px solid #58402c;
+  border-radius: 7px;
+  background-color: white;
+  padding: 10px;
+  margin-top: 5px;
+}
+
 #chat-icon {
   z-index: 100;
   position: fixed;
