--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -28,6 +28,6 @@ a {
     line-height: 35px;
     background-color: rgb(48, 72, 143);
     color: white;
-    border-radius: 7px;
+    border-radius: $bor_rad_standard;
     border: none;
 }
