--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -12,10 +12,7 @@
     i {
         color: white;
         font-size: 30px;
-        position: relative;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include centra_transform;
     }
 
 }
@@ -117,7 +114,7 @@
 }
 
 .top-how-work {
-    border-bottom: $border_bottom;
+    border-bottom: $border_brown;
 }
 
 .bottom-how-work img:last-of-type {
