--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -4,3 +4,4 @@ $light_background: #ffffff;
 $colored_background: #ffe7d2;
 $border_brown: 1px solid $text_color;
 $bor_rad_standard: 7px;
+$m-neg-left: -33px;
