--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -31,3 +31,14 @@ a {
     border-radius: $bor_rad_standard;
     border: none;
 }
+
+button {
+    cursor: pointer;
+}
+
+.mt-30 {
+    margin-top: 30px;
+}
+.mb-30 {
+    margin-bottom: 30px;
+}
