--- a/public/css/app.css
+++ b/public/css/app.css
@@ -267,15 +267,42 @@ header a:hover {
   width: 100%;
 }
 
+.left-strip,
+.right-strip {
+  margin: 80px 0;
+}
+
+.left-strip .strip-text,
+.left-strip .strip-image {
+  float: left;
+}
+
+.right-strip .strip-text,
+.right-strip .strip-image {
+  float: right;
+}
+
+.right-strip .strip-text .strip-text-container {
+  float: right;
+}
+
+.right-strip .strip-text .strip-text-container img {
+  margin-left: 20%;
+  float: unset;
+}
+
 .left-strip .strip-image img {
   margin-left: -15px;
   margin-right: 15px;
 }
 
+.right-strip .strip-image img {
+  margin-left: 15px;
+}
+
 .strip-image,
 .strip-text {
   width: 50%;
-  float: left;
 }
 
 .strip-image img {
