--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,5 +1,6 @@
 header {
-    max-width: 1150px;
+    width: $container_width;
+    height: 80px;
     margin: 0 auto;
     padding: 20px 0;
     border-bottom: $border_brown;
