--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -5,3 +5,4 @@ $colored_background: #ffe7d2;
 $border_brown: 1px solid $text_color;
 $bor_rad_standard: 7px;
 $m-neg-left: -33px;
+$container_width: 1150px;
