--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -20,7 +20,7 @@
 /*---- jumbo -----*/
 
 .jumbo {
-    width: 1150px;
+    width: $container_width;
     margin: 100px auto;
 
     div {
@@ -78,7 +78,7 @@
 
 .top-how-work,
 .bottom-how-work {
-    width: 1150px;
+    width: $container_width;
     margin: 0 auto;
     padding: 80px 0;
     text-align: center;
@@ -191,6 +191,7 @@
     }
 
     a {
+        display: block;
         color: #30488F;
         &:hover {
             color: #263972;
@@ -202,7 +203,57 @@
         float: right;
     }
 }
-.features-link {
-    display: block;
-    color: $text_color;
+
+/*-----team-message----*/
+
+#team-message {
+    background-color: $colored_background;
+    padding: 50px 0;
+}
+
+.message-container {
+    width: 630px;
+    margin: 0 auto;
+
+    h2 {
+        font-size: 40px;
+        text-align: center;
+        margin-bottom: 50px;
+        margin-top: 30px;
+    }
+
+    blockquote {
+        background-color: white;
+        border: $border_brown;
+        padding: 20px;
+        padding-left: 40px;
+        border-radius: $bor_rad_standard;
+        position: relative;
+        line-height: 27px;
+
+        i {
+            position: absolute;
+            top: -30px;
+            left: -8px;
+            font-size: 40px;
+            color: #11118b;
+        }
+    }
+
+}
+.author img {
+    width: 38px;
+    margin-right: 12px;
+}
+.author-name {
+    display: inline-block;
+}
+
+.sign-up-container {
+    text-align: center;
+    padding: 30px 0;
+
+    a {
+        display: block;
+    }
 }
