--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -20,6 +20,7 @@
 /*---- jumbo -----*/
 
 .jumbo {
+    background-color: $light_background;
     width: $container_width;
     margin: 100px auto;
 
@@ -132,6 +133,7 @@
 /*-----features-----*/
 
 #features {
+    background-color: $light_background;
     width: 100%;
 }
 
