--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,5 +1,6 @@
 header {
     position: fixed;
+    z-index: 200;
     top: 0;
     right: 0;
     left: 0;
@@ -7,6 +8,7 @@ header {
     height: 80px;
     padding: 20px 0;
     border-bottom: $border_brown;
+    box-shadow: 0 1px 1px 1px rgba(0,0,0,.08);
 
     nav {
         width: $container_width;
@@ -56,17 +58,21 @@ header {
 
 }
 
-#dropped-link {
-    padding: 10px;
+.dropdown {
+    position: relative;
+}
+
+.dropdown-toggle {
+    padding-bottom: 20px;
 
 }
 
-#dropped-link:hover + .sub-menu {
-    //da correggere
-    display: none;
+.dropdown-toggle:hover + .sub-menu {
+    display: flex;
 }
 
 .sub-menu {
+    position: absolute;
     display: none;
     flex-direction: column;
     padding: 10px;
