--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -64,10 +64,9 @@ header {
 
 .dropdown-toggle {
     padding-bottom: 20px;
-
 }
 
-.dropdown-toggle:hover + .sub-menu {
+.dropdown:hover .sub-menu {
     display: flex;
 }
 
