--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -23,6 +23,7 @@
     background-color: $light_background;
     width: $container_width;
     margin: 100px auto;
+    padding-top: 80px;
 
     div {
         width: 50%;
